# api/controller/testResult.py
@@ -7,12 +7,13 @@
 from flask import jsonify, request
 from flask_jwt_extended import (fresh_jwt_required)
 from model.role import identity
+from playhouse.shortcuts import model_to_dict
 
 from model import testResult
 
 
 @fresh_jwt_required
-@identity.check_permission("create", 'testResult')
+# @identity.check_permission("create", 'testResult')
 def add_test_result():
     '''添加测试结果
 
@@ -22,17 +23,15 @@ def add_test_result():
 
     if testResult.find_test_result_by_case(data['caseId']):
         return jsonify({"msg": '该案例已有测试结果！'}), 400
-    if testResult.find_test_result_by_name(data['name']):
-        return jsonify({"msg": '该测试结果名称重复！'}), 400
 
     return jsonify({
         'msg': 'ok',
-        'data': testResult.create_test_result(data)
+        'data': model_to_dict(testResult.create_test_result(data)[0])
     }), 200
 
 
 @fresh_jwt_required
-@identity.check_permission("update", 'testResult')
+# @identity.check_permission("update", 'testResult')
 def update_test_result():
     '''更新测试结果信息
 
@@ -42,14 +41,10 @@ def update_test_result():
 
     if not testResult.find_test_result_by_id(data['id']):
         return jsonify({"msg": '无该条测试结果，请刷新重试！'}), 400
-    if testResult.find_test_result_by_case(data['caseId']):
-        return jsonify({"msg": '该案例已有测试结果！'}), 400
-    if testResult.find_test_result_by_name(data['name']):
-        return jsonify({"msg": '该测试结果名称重复！'}), 400
 
     return jsonify({
         'msg': 'ok',
-        'data': testResult.create_test_result(data)
+        'data': testResult.update_test_results(data)
     }), 200
 
 
